# soroban-liquidity-pool

./: .gitignore  .gitpod.yml  .yarnrc.yml  Cargo.toml  Makefile  README.md  biome.json  initialize.sh  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: react-typescript-code-quality.yml
contracts/abundance/src/: contract.rs
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: contract.rs  interface.rs  lib.rs  storage.rs  test.rs  token.rs  types.rs
contracts/liquidity-pool/token/: soroban_token_contract.wasm
contracts/token/src/: contract.rs
frontend/: Makefile  package-lock.json  package.json  vite.config.ts
frontend/src/: index.tsx
frontend/src/components/icons/: index.tsx
frontend/src/components/molecules/: index.ts
frontend/src/interfaces/soroban/: liquidityPool.ts  token.ts
frontend/src/shared/: utils.tsx
src/: index.tsx
src/app/core/: App.tsx
src/app/core/context/: appContext.tsx
src/app/core/error-boundary/: error-boundary.test.tsx  index.tsx
src/app/core/hooks/: useAccount.ts
src/app/core/pages/home/: index.tsx  (+1 more)
src/app/core/routes/: index.tsx
src/components/atoms/: index.ts
src/components/atoms/connect-button/: index.tsx  styles.module.scss
src/components/atoms/disconnect-button/: index.tsx
src/components/icons/: index.tsx  style.css
src/components/organisms/: index.ts
src/components/types/: input.ts
src/config/theme/: css-variables.css
src/interfaces/http/: interceptors.ts
src/interfaces/soroban/: token.ts
src/shared/: contracts.ts  utils.tsx
(+56 files in other folders)
