[workspace]
resolver = "2"
members = [
  "contracts/token",
  "contracts/liquidity-pool",
]

[workspace.dependencies]
soroban-sdk = "20.4.0"
soroban-token-sdk = "20.4.0"
num-integer = { version = "0.1.45", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
